1
  File "trainval_net.py", line 53
    default=False, type=bool,
          ^
SyntaxError: invalid syntax
